internal/dataplane/parser/testdata/golden/ingress-v1-regex-prefix-exact-rule/default_golden.yaml
_format_version: "3.0"
services:
- connect_timeout: 60000
  host: foo-svc.foo-namespace.80.svc
  name: foo-namespace.foo-svc.80
  path: /
  port: 80
  protocol: http
  read_timeout: 60000
  retries: 5
  routes:
  - hosts:
    - example.com
    https_redirect_status_code: 426
    name: foo-namespace.foo.foo-svc.example.com.80
    path_handling: v0
    paths:
    - ~/whatever$
    preserve_host: true
    protocols:
    - http
    - https
    regex_priority: 0
    request_buffering: true
    response_buffering: true
    strip_path: false
    tags:
    - k8s-name:foo
    - k8s-namespace:foo-namespace
    - k8s-kind:Ingress
    - k8s-group:networking.k8s.io
    - k8s-version:v1
  tags:
  - k8s-name:foo-svc
  - k8s-namespace:foo-namespace
  - k8s-kind:Service
  - k8s-version:v1
  write_timeout: 60000
upstreams:
- algorithm: round-robin
  name: foo-svc.foo-namespace.80.svc
  tags:
  - k8s-name:foo-svc
  - k8s-namespace:foo-namespace
  - k8s-kind:Service
  - k8s-version:v1
