internal/dataplane/parser/testdata/golden/ingress-v1-regex-prefix-exact-rule/in.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: foo
  namespace: foo-namespace
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: foo-svc
            port:
              number: 80
        path: /whatever
        pathType: Exact
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: foo-svc
  namespace: foo-namespace
spec:
  ports:
    - port: 80
